# chats-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: build.yaml  checkers.yaml  deploy.yaml
chat/: containers.py  log_config.yaml  main.py  settings.py
chat/application/auth/: dependencies.py  forms.py  middlewares.py  session.py  user.py  validators.py
chat/application/backgroud_tasks/: broker.py  tasks.py
chat/application/chats/: checkers.py  schemas.py  validators.py
chat/application/dto/: chats.py  files.py  messages.py  users.py
chat/application/files/: files.py
chat/application/users/: files_quota.py  services.py
chat/auth/: decorators.py  dependencies.py  endpoints.py  forms.py  middlewares.py  password.py  session.py  user.py  validators.py
chat/auth/oauth/: constants.py  dispatch.py  dto.py  login.py
chat/backgroud_tasks/: broker.py  decorators.py  tasks.py
chat/chats/: chat.py  endpoints.py  ws.py
chat/chats/services/: chats.py  files.py  messages.py
chat/chats/use_cases/: chats.py
chat/chats/ws/: endpoints.py  manager.py  schemas.py  validators.py  ws.py
chat/cli/: init_bucket.py  migrate.py
chat/core/: constancies.py  constants.py  dependencies.py  dependens.py  domains.py  exceptions.py  exceptions_handlers.py  form.py  shared.py  utils.py  validator.py
chat/dto/: chats.py  messages.py  users.py
chat/interfaces/: dto.py  form.py  repository.py  validator.py
chat/migrations/: env.py
chat/shared/: dependencies.py
chat/static/: style.css
chat/templates/: 404.html  authorization.html  base.html  chat.html  index.html  register.html
tests/: conftest.py
tests/factories/: users.py
(+59 files in other folders)
